--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&family=Raleway:wght@500&family=Satisfy&display=swap');
 img{
     width: 50px;
 }
@@ -8,7 +9,12 @@ img{
     width: 100%;
     margin-bottom: 35px;
 }
-.contact>:nth-child(1)>*{
+.contact>:nth-child(1)>:nth-child(1){
+    font-family: "Raleway";
+    font-size: 4rem;
+    font-weight: bolder;
+}
+.contact>:nth-child(1)>:nth-child(2){
     font-size: 3rem;
     font-weight: bolder;
 }
