--- a/src/components/myService/service.css
+++ b/src/components/myService/service.css
@@ -1,25 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:ital,wght@1,300&family=Raleway:wght@500&family=Satisfy&display=swap');
 .service{
     display: flex;
-    margin: 40px 20px;
+    margin: 10px 10px;
     justify-content: space-around;
     width: 95%;
 }
 .service_left_part{
     display: flex;
     flex-direction: column;
-    margin-top: 150px;
+    margin-top: 120px;
 }
 .service_left_part>:nth-child(1){
-    font-size: 3rem;
+    font-size: 2.9rem;
     font-weight: bolder;
 }
 .service_left_part>:nth-child(2){
-    font-size: 3rem;
+    font-size: 2.9rem;
     font-weight: bolder;
 }
 .service_left_part>:nth-child(3){
-    color: rgb(156, 150, 150);
+    color: rgb(121 , 121 , 121);
     margin-top: 10px;
+    font-family: "Bree Serif";
+    font-weight: 800;
+    font-size: 2vmax;
 }
 .service_left_part>:nth-child(4){
     margin-top: 85px;
@@ -58,5 +62,8 @@
         transform: scale(0.7);
         right: 10px;
         margin-top: 10px;
+    }
+    .service_left_part>:nth-child(3){
+        font-size: 5.5vmin;
     }
 }
