--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,4 +1,7 @@
- .nav_bar{
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Oswald&family=Phudu:wght@500&family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap');
+
+.nav_bar{
     width: 100%;
     height: 65px;
     display: flex;
@@ -18,6 +21,11 @@
     font-size: 2rem;
 }
 
+.right_nav_bar >h3{
+    font-size: larger;
+    font-family: "phudu";
+}
+
 .right_nav_bar span{
     text-align: center;
     margin-left: 10px;
@@ -26,7 +34,7 @@
 .left_nav_bar{
     display: flex;
     align-items: center;
-    /* justify-content: space-around; */
+ /* justify-content: space-around; */
 }
 
 .nav_list_ul>ul{
@@ -38,10 +46,17 @@
     color: #F5C32C;
     transition: border-bottom-width 0.1s;
     font-size: 1.2rem;
+    font-family: "Montserrat";
+    height: 25px;
+}
+
+.nav_list_ul>ul>li>a{
+    font-family: "Montserrat";
+    font-weight: 1000;
 }
 
 .nav_list_ul>ul>li:hover{
-    color: black;
+    color: goldenrod;   
     cursor: pointer;
     border-bottom: 3px solid #F5C32C;
 }
@@ -61,9 +76,9 @@
         justify-content: space-between;
     }
     .left_nav_bar{
-        width: 0px;
+        width: 27px;
     }
-     .menu_bar{
+    .menu_bar{
         display: block;
         position: relative;
         right: 30px;
@@ -99,11 +114,11 @@
         cursor: pointer;
         border-bottom: 3px solid #F5C32C;
     }
-    .fa-solid{
+    .fa-bars{
         position: relative;
         font-size: 2rem;
     }
-    .fa-solid:hover{
+    .fa-bars:hover{
         cursor: pointer;
         color: #F5C32C;
     }
