--- a/src/components/myProjects/project.css
+++ b/src/components/myProjects/project.css
@@ -31,7 +31,7 @@
   align-items: center;
   justify-content: center;
 }
-.projectImg{
+.projectimg{
   width: 22vmax;
   height: 12vmax;
   z-index: 3;
@@ -106,7 +106,7 @@
     width: 35vmin;
     height: 20vmin;
   }
-  .projectImg{
+  .projectimg{
     width: 35vmin;
     height: 20vmin;
   }
